fixed comment pfp cropping

--- a/stylesheets/components/_comment.scss
+++ b/stylesheets/components/_comment.scss
@@ -13,10 +13,15 @@
 
 .comment {
     margin-left: 20px;
+    border: none; // reset border from article element
     border-left: 2px solid #e5e5e5;
     padding-left: 7px;
     padding-bottom: 6px;
     padding-top: 0;
+    overflow: visible;
+    &:hover {
+        border-color: $gray-250;
+    }
     &.highlighted {
         background-color: #ececec;
     }
